@startuml UserModule
title Domain Model - User & Relationships

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classAttributeFontSize 14
skinparam classBackgroundColor #FDF6E3
skinparam classBorderColor #073642
skinparam classArrowFontSize 14
skinparam defaultTextAlignment center
skinparam shadowing false
skinparam linetype ortho

class User {
    +id: String
    +name: String
    +email: String
    +role: UserRole
    +avatarUrl: String?
    +isActive: Boolean
    +createdAt: Instant
    +updatedAt: Instant
    --
    +login(email: String, password: String, role: UserRole): Flow<Resource<User>>
    +register(user: User, password: String): Flow<Resource<User>>
    +forgotPassword(email: String): Flow<Resource<String>>
    +changePassword(currentPassword: String, newPassword: String): Flow<Resource<Unit>>
    +signOut(): Flow<Resource<Unit>>
    +getCurrentUser(): Flow<Resource<User?>>
    +getUserById(userId: String): Flow<Resource<User?>>
    +getUserByEmail(email: String): Flow<Resource<User?>>
    +getUsersByRole(role: String): Flow<Resource<List<User>>>
    +getAllUsers(): Flow<Resource<List<User>>>
    +addUser(user: User, id: String? = null): Flow<Resource<String>>
    +updateUser(id: String, user: User): Flow<Resource<Unit>>
    +deleteUser(userId: String): Flow<Resource<Unit>>
    +updateAvatar(userId: String, avatarUrl: String): Flow<Resource<Unit>>
}

class Teacher {
    +id: String
    +userId: String
    +specialization: String
    +level: String
    +experienceYears: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getTeacherProfile(userId: String): Flow<Resource<Teacher>>
    +updateTeacherProfile(teacherId: String, specialization: String? = null, level: String? = null, experienceYears: Int? = null): Flow<Resource<Unit>>
    +deleteTeacherProfile(teacherId: String): Flow<Resource<Unit>>
    +getClassesByTeacher(teacherId: String): Flow<Resource<List<Class>>>
    +getGamesByTeacher(teacherId: String): Flow<Resource<List<MiniGame>>>
}

class Student {
    +id: String
    +userId: String
    +dateOfBirth: LocalDate
    +gradeLevel: String
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getStudentProfile(studentId: String): Flow<Resource<Student>>
    +getStudentProfileByUserId(userId: String): Flow<Resource<Student?>>
    +updateStudentProfile(studentId: String, dateOfBirth: LocalDate? = null, gradeLevel: String? = null): Flow<Resource<Unit>>
    +linkParentToStudent(studentId: String, parentId: String, relationship: String, isPrimaryGuardian: Boolean = true): Flow<Resource<Unit>>
    +getClassesByStudent(studentId: String): Flow<Resource<List<Class>>>
    +getStudentTestResults(studentId: String): Flow<Resource<List<StudentTestResult>>>
    +getAllResultsByStudent(studentId: String): Flow<Resource<List<StudentMiniGameResult>>>
}

class Parent {
    +id: String
    +userId: String
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getParentProfile(parentId: String): Flow<Resource<Parent?>>
    +getLinkedStudents(parentId: String): Flow<Resource<List<Student>>>
    +getStudentClassesForParent(parentId: String, studentId: String? = null, enrollmentStatus: EnrollmentStatus? = null): Flow<Resource<List<ClassEnrollmentInfo>>>
    +updateParentProfile(parent: Parent): Flow<Resource<Unit>>
    +unlinkStudent(parentId: String, studentId: String): Flow<Resource<Unit>>
}

class ParentStudent {
    +parentId: String
    +studentId: String
    +relationship: RelationshipType
    +linkedAt: Instant
    +isPrimaryGuardian: Boolean
    --
    +searchStudent(query: String): Flow<Resource<List<StudentSearchResult>>>
    +getLinkedStudents(parentId: String): Flow<Resource<List<LinkedStudentInfo>>>
    +getStudentClassesForParent(parentId: String, studentId: String? = null, enrollmentStatus: EnrollmentStatus? = null): Flow<Resource<List<ClassEnrollmentInfo>>>
    +checkStudentLinkedToParent(parentId: String, studentId: String): Flow<Resource<Boolean>>
    +checkStudentHasPrimaryGuardian(studentId: String): Flow<Resource<Boolean>>
    +linkParentToStudent(studentId: String, parentId: String, relationship: String, isPrimaryGuardian: Boolean = true): Flow<Resource<Unit>>
    +unlinkStudent(parentId: String, studentId: String): Flow<Resource<Unit>>
}

class StudentSearchResult {
    +student: Student
    +user: User
}

class LinkedStudentInfo {
    +student: Student
    +user: User
    +parentStudent: ParentStudent
}

' Relationships
User "1" -- "0..1" Student : userId
User "1" -- "0..1" Teacher : userId
User "1" -- "0..1" Parent : userId

Parent "1" -- "0..*" ParentStudent : parentId
Student "1" -- "0..*" ParentStudent : studentId

@enduml
